// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderRuby matches the snapshot for multi-version.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-ruby v0.0.2 or later.

# frozen_string_literal: true

require 'hightouch/analytics'

TrackOrderCompletedV1 = Struct.new(:orderId, keyword_init: true)

TrackOrderCompletedV2 = Struct.new(:orderId, :total, keyword_init: true)

module HtEvents
  def self.to_map(value)
    return {} if value.nil?
    hash = if value.is_a?(Hash)
             value
           elsif value.respond_to?(:to_h)
             value.to_h
           else
             {}
           end
    hash.each_with_object({}) do |(key, val), out|
      out[key.to_s] = val unless val.nil?
    end
  end

  def self.set_at_path(root, path, value)
    return root if path.nil? || path.empty?
    clone = root.dup
    cursor = clone
    path[0...-1].each do |key|
      nxt = cursor[key]
      child = nxt.is_a?(Hash) ? nxt.dup : {}
      cursor[key] = child
      cursor = child
    end
    cursor[path[-1]] = value
    clone
  end

  def self.with_schema_version(data, context, path, version, envelope_key)
    return [data, context] if path.nil? || path.empty?
    head, *rest = path
    if head == envelope_key
      return [set_at_path(data.dup, rest, version), context]
    end
    if head == "context"
      ctx = context.is_a?(Hash) ? context.dup : {}
      return [data, set_at_path(ctx, rest, version)]
    end
    [data, context]
  end

  class << self
    private :to_map, :set_at_path, :with_schema_version
  end

  def self.track_order_completed_v1(client, user_id, properties = TrackOrderCompletedV1.new, **opts)
    data, ctx = with_schema_version(to_map(properties), opts[:context], nil, "v1", "properties")
    client.track(
      user_id: user_id,
      event: "Order Completed",
      properties: data,
      context: ctx,
      anonymous_id: opts[:anonymous_id],
      timestamp: opts[:timestamp],
      integrations: opts[:integrations]
    )
  end

  def self.track_order_completed_v2(client, user_id, properties = TrackOrderCompletedV2.new, **opts)
    data, ctx = with_schema_version(to_map(properties), opts[:context], nil, "v2", "properties")
    client.track(
      user_id: user_id,
      event: "Order Completed",
      properties: data,
      context: ctx,
      anonymous_id: opts[:anonymous_id],
      timestamp: opts[:timestamp],
      integrations: opts[:integrations]
    )
  end

  def self.track_order_completed(*args, **opts)
    track_order_completed_v2(*args, **opts)
  end
end
"
`;

exports[`renderRuby matches the snapshot for simple-track.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-ruby v0.0.2 or later.

# frozen_string_literal: true

require 'hightouch/analytics'

TrackOrderCompletedDefault = Struct.new(:orderId, :total, keyword_init: true)

module HtEvents
  def self.to_map(value)
    return {} if value.nil?
    hash = if value.is_a?(Hash)
             value
           elsif value.respond_to?(:to_h)
             value.to_h
           else
             {}
           end
    hash.each_with_object({}) do |(key, val), out|
      out[key.to_s] = val unless val.nil?
    end
  end

  def self.set_at_path(root, path, value)
    return root if path.nil? || path.empty?
    clone = root.dup
    cursor = clone
    path[0...-1].each do |key|
      nxt = cursor[key]
      child = nxt.is_a?(Hash) ? nxt.dup : {}
      cursor[key] = child
      cursor = child
    end
    cursor[path[-1]] = value
    clone
  end

  def self.with_schema_version(data, context, path, version, envelope_key)
    return [data, context] if path.nil? || path.empty?
    head, *rest = path
    if head == envelope_key
      return [set_at_path(data.dup, rest, version), context]
    end
    if head == "context"
      ctx = context.is_a?(Hash) ? context.dup : {}
      return [data, set_at_path(ctx, rest, version)]
    end
    [data, context]
  end

  class << self
    private :to_map, :set_at_path, :with_schema_version
  end

  def self.track_order_completed_default(client, user_id, properties = TrackOrderCompletedDefault.new, **opts)
    data, ctx = with_schema_version(to_map(properties), opts[:context], ["context", "protocols", "schemaVersion"], "default", "properties")
    client.track(
      user_id: user_id,
      event: "Order Completed",
      properties: data,
      context: ctx,
      anonymous_id: opts[:anonymous_id],
      timestamp: opts[:timestamp],
      integrations: opts[:integrations]
    )
  end

  def self.track_order_completed(*args, **opts)
    track_order_completed_default(*args, **opts)
  end
end
"
`;

exports[`renderRuby matches the snapshot for with-refs.json 1`] = `
"# Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
# Requires peer events-sdk-ruby v0.0.2 or later.

# frozen_string_literal: true

require 'hightouch/analytics'

IdentifyDefault = Struct.new(:email, keyword_init: true)

TrackCartViewedDefault = Struct.new(:itemCount, :amount, :currency, keyword_init: true)

module HtEvents
  def self.to_map(value)
    return {} if value.nil?
    hash = if value.is_a?(Hash)
             value
           elsif value.respond_to?(:to_h)
             value.to_h
           else
             {}
           end
    hash.each_with_object({}) do |(key, val), out|
      out[key.to_s] = val unless val.nil?
    end
  end

  def self.set_at_path(root, path, value)
    return root if path.nil? || path.empty?
    clone = root.dup
    cursor = clone
    path[0...-1].each do |key|
      nxt = cursor[key]
      child = nxt.is_a?(Hash) ? nxt.dup : {}
      cursor[key] = child
      cursor = child
    end
    cursor[path[-1]] = value
    clone
  end

  def self.with_schema_version(data, context, path, version, envelope_key)
    return [data, context] if path.nil? || path.empty?
    head, *rest = path
    if head == envelope_key
      return [set_at_path(data.dup, rest, version), context]
    end
    if head == "context"
      ctx = context.is_a?(Hash) ? context.dup : {}
      return [data, set_at_path(ctx, rest, version)]
    end
    [data, context]
  end

  class << self
    private :to_map, :set_at_path, :with_schema_version
  end

  def self.identify_default(client, user_id, traits = IdentifyDefault.new, **opts)
    data, ctx = with_schema_version(to_map(traits), opts[:context], nil, "default", "traits")
    client.identify(
      user_id: user_id,
      traits: data,
      context: ctx,
      anonymous_id: opts[:anonymous_id],
      timestamp: opts[:timestamp],
      integrations: opts[:integrations]
    )
  end

  def self.identify(*args, **opts)
    identify_default(*args, **opts)
  end

  def self.track_cart_viewed_default(client, user_id, properties = TrackCartViewedDefault.new, **opts)
    data, ctx = with_schema_version(to_map(properties), opts[:context], nil, "default", "properties")
    client.track(
      user_id: user_id,
      event: "Cart Viewed",
      properties: data,
      context: ctx,
      anonymous_id: opts[:anonymous_id],
      timestamp: opts[:timestamp],
      integrations: opts[:integrations]
    )
  end

  def self.track_cart_viewed(*args, **opts)
    track_cart_viewed_default(*args, **opts)
  end
end
"
`;
